# Touche

./: .gitignore  .kateproject  CMakeLists.txt  Changelog  Dockerfile.arch  Dockerfile.ubuntu  README  Touche.kdev4  build_arch.sh  build_ubuntu.sh  docker-compose.yml  index.html  params.json  version.txt
App/: CMakeLists.txt  main.cpp
App/files/: 99-hiddev-input.rules  Touche.notifyrc  keyboard_database.json
App/files/KeyboardDatabases/: AppleRemoteControl.json  MicrosoftWirelessKeyboard3000.json  Wiimote.json
BindingsConfigurationDialog/: CMakeLists.txt  bindingconfigurationwidget.cpp  keybindingconfiguration.cpp  keysconfigurationdialog.cpp  keysconfigurationdialog.h
BindingsConfigurationDialog/bindingsGui/: RunCommandConfig.cpp  RunCommandConfig.h  RunCommand_cfg.ui  ToKeyConfig.cpp  ToKeyConfig.h  ToKey_cfg.ui  x11keysymbolscompleter.cpp
BindingsConfigurationDialog/models/: cfgdevice.cpp  cfgdevice.h  cfgkeyevent.h
Core/: CMakeLists.txt  touchecore.cpp  touchecore.h
Core/backend/: updatekeysymbolmapping.cpp
Core/backend/config/: bindingsconfig.cpp  bindingsconfig.h  databaseentry.cpp  databaseentry.h  keyboarddatabase.cpp  keyboarddatabase.h
Core/backend/hiddev/: HiddevDevices.cpp  HiddevDevices.h  finddevices.cpp  hid_inputevent.cpp  hid_inputevent.h  hiddev.cpp  hiddev.h
Core/domain/: Device.cpp  Device.h  DevicesList.cpp  DevicesList.h  binding.h  configevent.cpp  configevent.h  deviceinfo.cpp  deviceinfo.h  donothingbinding.cpp  donothingbinding.h  dumpkeys.cpp  dumpkeys.h  nomoreeventsinputevent.cpp  runcommandbinding.cpp  tokeybinding.cpp  tokeybinding.h  translatekeyevents.cpp  translatekeyevents.h
GUI/: CMakeLists.txt  EditProfiles.cpp  EditProfiles.h  EditProfilesDialog.cpp  EditProfilesDialog.h  ModulesPage.cpp  ModulesPage.h  ModulesPage.ui  SettingsDialog.cpp  SettingsDialog.h  touchesystemtray.cpp  touchesystemtray.h
GUI/modules/wiimote/: WiimoteDevice.cpp  WiimoteDevice.h  WiimoteModule.cpp  WiimoteModule.h
Settings/: CMakeLists.txt  bindingconfigurationwidget.cpp  bindingconfigurationwidget.h  keybindingconfiguration.cpp  keybindingconfiguration.h  keysconfigurationdialog.cpp  keysconfigurationdialog.h
Settings/bindingsGui/: RunCommandConfig.cpp  RunCommandConfig.h  RunCommand_cfg.ui  ToKeyConfig.cpp  ToKeyConfig.h  ToKey_cfg.ui  qstringlistedit.cpp  qstringlistedit.h  qstringlistedit.ui  x11keysymbolscompleter.cpp
Settings/models/: cfgdevice.h  cfgkey.cpp  cfgkey.h
Touche_Configuration/: CMakeLists.txt  RunCommand_cfg.ui  keysconfigurationdialog.cpp  keysconfigurationdialog.h
Touche_Configuration/models/: cfgdevice.h  cfgkeyevent.h
Touche_Core/: CMakeLists.txt  touchecore.cpp  touchecore.h
Touche_Core/backend/: updatekeysymbolmapping.cpp  updatekeysymbolmapping.h
Touche_Core/backend/config/: databaseentry.cpp
Touche_Core/backend/hiddev/: finddevices.cpp  finddevices.h  hid_inputevent.cpp  hid_inputevent.h  hiddev.cpp  hiddev.h
Touche_Core/domain/: configevent.cpp  configevent.h  deviceinfo.cpp  deviceinfo.h  dumpkeys.cpp  dumpkeys.h  hid_inputevent.cpp  hid_inputevent.h  inputevent.cpp  inputevent.h  inputregister.h  nomoreeventsinputevent.cpp  nomoreeventsinputevent.h  runcommandbinding.h  tokeybinding.cpp  translatekeyevents.cpp  translatekeyevents.h
Touche_kde/: CMakeLists.txt  files  main.cpp  trayIcon
Touche_kde/desktop/: Touche.desktop
Touche_qt/: CMakeLists.txt
Touche_qt/files/: keyboard_database.json
Touche_qt/trayIcon/: touchesystemtray.cpp  traymanager.h
Touché/: Touché.pro  main.cpp
Touché-kde/: Touché-kde.pro  files  main.cpp  trayIcon
Touché-kde/desktop/: Touché.desktop
Touché-kde/files/: 99-hiddev-input.rules  keyboard_database.json
Touché-kde/files/samples_config/: Touché.conf
Touché/desktop/: Touché.desktop
Touché/files/: Touché.desktop  keyboard_database.json
Touché/files/samples_config/: Touché.conf
Touché/trayIcon/: touchesystemtray.cpp  touchesystemtray.h  traymanager.h
Touché_Configuration/: RunCommand_cfg.ui  ToKey_cfg.ui  Touché_Configuration.pro  bindingconfigurationwidget.cpp  keybindingconfiguration.cpp  keybindingconfiguration.h  keybindingconfiguration.ui  keysconfigurationdialog.cpp  keysconfigurationdialog.h  keysconfigurationdialog.ui  qstringlistedit.cpp  qstringlistedit.ui  toucheconfiguration.cpp  toucheconfiguration.h  x11keysymbolscompleter.h
Touché_Configuration/models/: cfgdevice.cpp  cfgkey.cpp  cfgkey.h  cfgkeyevent.cpp  cfgkeyevent.h
Touché_Core/: Touché_Core.pro  touchecore.cpp  touchecore.h
Touché_Core/backend/: updatekeysymbolmapping.h
Touché_Core/backend/config/: databaseentry.h
Touché_Core/backend/hiddev/: finddevices.cpp  finddevices.h  (+2 more)
Touché_Core/domain/: binding.h  configevent.h  deviceinfo.cpp  deviceinfo.h  donothingbinding.h  dumpkeys.cpp  dumpkeys.h  inputevent.h  inputregister.h  tokeybinding.cpp  tokeybinding.h  translatekeyevents.h
Touché_staticlib/: Touché_staticlib.pro  touchecore.cpp  touchecore.h
Touché_staticlib/domain/: binding.h  configevent.cpp  configevent.h  deviceinfo.cpp  deviceinfo.h  donothingbinding.cpp  donothingbinding.h  dumpkeys.cpp  dumpkeys.h  inputevent.cpp  inputevent.h  inputregister.cpp  inputregister.h  nomoreeventsinputevent.cpp  nomoreeventsinputevent.h  runcommandbinding.cpp  runcommandbinding.h  tokeybinding.cpp  tokeybinding.h  translatekeyevents.cpp  translatekeyevents.h
cmake/modules/: FindCWiid.cmake
files/: touche_0.1.1-1_amd64.deb  touche_0.1.1-1_i386.deb
kde/: CMakeLists.txt  files  main.cpp  trayIcon
kde/desktop/: Touche.desktop
kde/trayIcon/: touchesystemtray.cpp  touchesystemtray.h
qt/: CMakeLists.txt  main.cpp
qt/desktop/: Touche.desktop
qt/trayIcon/: touchesystemtray.cpp  touchesystemtray.h
scripts/: LicenseHeader.txt  applyLicenseHeader.sh  compile  makePackage  makePackage.excludes
tests/: CMakeLists.txt  hiddevicetest.cpp
wiimote/: CMakeLists.txt  angles.cpp  angles.h  cwiidconnectionworker.cpp  cwiidconnectionworker.h  timeutils.cpp  timeutils.h  wiimote.cpp  wiimote.h  wiimote_messages.cpp  wiimote_messages.h  wiimotemanager.cpp  wiimotemanager.h
(+12 files in other folders)
